--- a/web/prueba/PdfFlipper01/PdfFlipper/turnjs4/samples/magazine/css/magazine.css
+++ b/web/prueba/PdfFlipper01/PdfFlipper/turnjs4/samples/magazine/css/magazine.css
@@ -1,27 +1,32 @@
 body{
-	overflow:auto;
+	overflow:hidden;
 	background-color:#FFFFFF;
 	margin:0;
 	padding:0;
+	
+
 }
 
 
 
 .magazine-viewport .container{
+	
+	
 	position:absolute;
-	top:50%;
-	left:50%;
-	max-width:922px;
+	top:43%;
+	left:40%;
+	max-width:1000px;
 	max-height:600px;	
 	
 	
 }
 
 .magazine-viewport .magazine{
-	width:922px;
+	
+	width:400px;
 	height:600px;
 	left:-461px;
-	top:-300px;
+	top:-100px;
 	
 }
 
