--- a/web/prueba/PdfFlipper01/PdfFlipper/turnjs4/samples/magazine/css/magazine.css
+++ b/web/prueba/PdfFlipper01/PdfFlipper/turnjs4/samples/magazine/css/magazine.css
@@ -1,9 +1,9 @@
 body{
-	overflow:hidden;
+	overflow-y:hidden;
+	overflow-x:auto;
 	background-color:#FFFFFF;
 	margin:0;
-	padding:0;
-	
+	padding:0;	
 
 }
 
